--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["multiplayer", "game", "websocket", "realtime"],
+  "keywords": [
+    "multiplayer",
+    "game",
+    "websocket",
+    "realtime"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "firebase-admin": "^13.6.0",
     "socket.io": "^4.6.1"
   }
 }
