--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express": "^4.18.2",
     "firebase-admin": "^13.6.0",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "socket.io-client": "^4.8.3"
   }
 }
