--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.6.0",
-    "socket.io": "^4.6.1"
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "socket.io": "^4.6.1",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "socket.io-client": "^4.8.3"
