--- a/.platform/render/render.yaml
+++ b/.platform/render/render.yaml
@@ -8,7 +8,7 @@ services:
     plan: free
     
     # Build settings
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: npm start
     
     # Environment
