--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "clean-css": "^5.3.3",
     "html-minifier-terser": "^7.2.0",
+    "javascript-obfuscator": "^5.1.0",
     "socket.io-client": "^4.8.3",
     "terser": "^5.44.1"
   }
